query is working